TravelRoute - Ajuste ConnectionStrings

--- a/src/TravelRoutes.API/appsettings.json
+++ b/src/TravelRoutes.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-TL23CHLD;Database=TravelRoutes;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=;Database=;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
